Revision history for Net-XMPP2

0.02
         - fixed error in binding-handling in case the bind iq gets a timeout
         - added samples/room_lister* and samples/conference_lister
         - redesigned disco mechanism a bit
         - added error collection event for nicer error reporting capabilities
         - added samples/disco_test
         - implemented XEP-0004
         - added samples/limit_searcher
         - added simxml()
         - splitting up large packets when writing
         - fixed bad link in documentation of Net::XMPP2::IM::Connection
         - added samples/simple_example_1
         - fixed some typos (thanks to lynx aka carlo)

0.01 Thu Jul  5 19:34:30 CEST 2007
         - fixed first bugs and tested in daily usage.
         - implemented XEP-0086
         - implemented XEP-0030
         - implemented XEP-0077
         - implemented 95% of RFC 3921
         - implemented 95% of RFC 3920
         - first version, released to an unsuspecting world :-)