@@ -10,6 +10,7 @@ use Net::XMPP2::Error::Stream;
 use Net::XMPP2::Error::Presence;
 use Net::XMPP2::Error::Message;
 use Net::XMPP2::Error::Parser;
+use Net::XMPP2::Error::Exception;
 
 =head1 NAME
 
